sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: not found: value lgr
for(i<-1 to lgr-1){
            ^